--- a/scss/site.scss
+++ b/scss/site.scss
@@ -15,8 +15,13 @@
     margin-bottom: 25px;
     text-transform: uppercase;
 }
-    
+
+
 /* Mobile Styles */
+    .shrink-header{
+        padding: 22px 25px !important;
+        background-color: #2E2C48;
+    }
 body{
     width: 100%;
     background: white;
@@ -37,12 +42,17 @@ header{
     grid-area: header;
     background: url("../assets/images/banner.jpg") no-repeat center;
     background-size: cover;
+    .logo-container{
+        width: 100%;
+        position: fixed;
+        z-index: 999;
+    }
     .main-nav{
+        padding: 40px 25px;
         display: grid;
         grid-template-areas: "logo nav-links nav-links";
-        padding: 40px 25px;
         border-bottom: #5D5C74 1px solid;
-        // position: fixed;
+        transition: all 0.4s ease-in-out;
     
         .logo{
             grid-area: logo;
@@ -69,7 +79,7 @@ header{
     }
 
     .hero-content{
-        padding: 85px 25px 0 25px;
+        padding: 250px 25px 0 25px;
         color: white;
         text-align: center;
         line-height: 1.2;
@@ -125,20 +135,19 @@ header{
 .projects{
     grid-area: projects;
     img{
-        width: 100%;
+        max-width: 100%;
         height: auto;
+        vertical-align: middle;
     }
 }
 
 .team-members{
     grid-area: team-members;
-    padding: 95px 155px;
+    padding: 40px 155px;
 
     .member{
         text-align: center;
-        img{
-            margin-top: 55px;
-        }
+        margin-top: 55px;
         .first-member{
             margin-top: 0px;
         }
@@ -146,6 +155,9 @@ header{
             font-size: 1.2em;
             opacity: 0.85;
             margin-top: 17px;
+        }
+        p{
+            text-align: center;
         }
         p:nth-child(3){
             color: #e84545;
@@ -172,6 +184,7 @@ header{
             }
         }
     }
+
 }
 
 .testimonials{
@@ -265,12 +278,181 @@ footer{
 
 /* Tablet Styles */
 @media only screen and (min-width : 768px){
-
     .hero-content{
         h1{
             font-size: 1.5em;
         }
     }
+
+    .features{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-template-areas: "featA featB";    
+    }
+    .projects{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        grid-template-areas: "projectA projectB";
+        grid-gap: 1px;
+
+    }
+    .team-members{
+        padding: 40px 55px;
+        display: grid;
+        grid-template-columns: 270px 270px;
+        grid-template-rows: auto;
+        justify-content: center;
+        grid-column-gap: 95px;
+        grid-template-areas: "projectA projectB";
+
+
+    }
     // %jdoasfjodf7878941
     // ?ksdf792adsf_
+}
+
+
+/* Desktop Styles */
+@media only screen and (min-width : 1024px){
+    // .hero-content{
+    //     h1{
+    //         font-size: 1.5em;
+    //     }
+    // }
+
+    .features{
+        display: grid;
+        grid-template-columns: 270px 270px 270px;
+        grid-template-areas: "featA featB featC";  
+        justify-content: center;
+        grid-gap: 45px;
+        .feat>p{
+            padding: 0 10px;
+        }
+        
+    }
+    .projects{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "projectA projectB" ;
+
+    }
+    .team-members{
+        padding: 40px 38px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        justify-items: center;
+        justify-content: center;
+        grid-column-gap: 20px;
+        grid-template-areas: "projectA projectB projectC projectD";
+        .member{
+            width:220px;
+            h3{
+                text-align: left;
+            }
+            p{
+                text-align: left;
+            }
+            img{
+                width:220px;
+            }
+            .social{
+                justify-content: space-between;
+            }
+        }
+    }
+
+    footer{
+        section{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-areas: "footer footer footer";
+            .location,.share,.about{
+                margin: 0;
+                padding-top: 70px;
+                padding-bottom: 100px;
+                p{
+                    line-height: 1.6;
+                }
+            }
+        }
+    }
+}
+
+/* Big Desktop Styles */
+@media only screen and (min-width : 1280px){
+    header{
+        .hero-content{
+            h1{
+                font-size: 3.8em;
+                padding: 0 120px;
+            }
+            p{
+                font-size: 1.25em;
+                padding: 0 120px;                
+            }
+        }
+    }
+
+    .features{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-areas: "featA featB featC";  
+        justify-content: center;
+        grid-gap: 45px;
+        padding: 90px 70px;
+        .feat>p{
+            padding: 0 32.5px;
+        }  
+    }
+    .projects{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-areas: "projectA projectB projectC projectD";
+        grid-gap: 1px;
+
+    }
+    .team-members{
+        padding: 40px 70px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+
+        justify-content: center;
+        justify-items: center;
+        grid-column-gap: 0px;
+        grid-template-areas: "projectA projectB projectC projectD";
+        .member{
+            width:270px;
+            h3{
+                text-align: left;
+            }
+            p{
+                text-align: left;
+            }
+            img{
+                width:270px;
+            }
+            .social{
+                justify-content: space-between;
+            }
+        }
+    }
+
+    footer{
+        section{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-areas: "footer footer footer";
+            .location,.share,.about{
+                margin: 0;
+                padding-top: 70px;
+                padding-bottom: 100px;
+                p{
+                    line-height: 1.6;
+                }
+            }
+        }
+    }
 }
